--- a/src/oodj_assignment/GUI_Daily_item_Entry.form
+++ b/src/oodj_assignment/GUI_Daily_item_Entry.form
@@ -81,9 +81,9 @@
               </Group>
               <EmptySpace pref="9" max="32767" attributes="0"/>
               <Component id="jScrollPane3" min="-2" pref="251" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="back" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
